@@ -3,9 +3,9 @@ name = Naked Stacked
 description = Same as Naked except the Author Pane is on top.
 version = 2.x
 base style = naked
-; Information added by drupal.org packaging script on 2011-11-05
-version = "7.x-2.0-beta2"
+; Information added by drupal.org packaging script on 2011-12-05
+version = "7.x-2.0-rc1"
 core = "7.x"
 project = "advanced_forum"
-datestamp = "1320510629"
+datestamp = "1323079837"
 
